<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_radiobutton_text">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_udacity">LoadApp - Current repository by Udacity</string>
    <string name="radio_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="glide_url">https://github.com/bumptech/glide/archive/master.zip</string>
    <string name="loadapp_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="retrofit_url">https://github.com/square/retrofit/archive/master.zip</string>
    <string name="choose_download_file">Choose a file to download first</string>
    <string name="button_text_download">DOWNLOAD</string>
    <string name="file_downloading">File is downloading</string>
    <string name="download_channel_description">Download status notifications (complete, fail, etc)</string>
    <string name="download_channel_name">Download Status</string>
    <string name="download_channel_id">download_status_channel</string>
    <string name="file_name_text">File name:</string>
    <string name="status_text">Status:</string>
    <string name="ok_button_text">OK</string>
    <string name="notification_text_content">Status update for your download</string>
</resources>
