<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <!-- Downloaded cloud image from
    https://material.io/resources/icons/?icon=cloud_download&style=baseline
    and imported using Vector Asset Studio
    (right click Drawable folder, New, Vector Asset) -->

    <ImageView
        android:id="@+id/download_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="#112B47"
        android:src="@drawable/ic_cloud_download_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/holo_purple" />

    <RadioGroup
        android:id="@+id/radio_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download_image">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/radiobutton_bottom_margin"
            android:onClick="onRadioButtonClicked"
            android:text="@string/glide_radiobutton_text" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_loadapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:layout_marginBottom="@dimen/radiobutton_bottom_margin"
            android:text="@string/radio_udacity" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_retrofit" />
    </RadioGroup>


    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:loadingBarColor="@color/loading_bar_color"
        app:backgroundCustomColor="@color/colorPrimary"
        app:textColor="@color/download_button_text_color"
        app:loadingCircleColor="@color/loading_circle_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>